@@ -5,7 +5,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>fr.guiguilechat</groupId>
 	<artifactId>JCELechat</artifactId>
-	<version>5.4.2</version>
+	<version>5.4.3</version>
+	<prerequisites>
+		<maven>3.0</maven>
+	</prerequisites>
 	<licenses>
 		<license>
 			<name>GNU Lesser General Public License v3</name>
@@ -50,7 +53,7 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>2.4</version>
+				<version>3.1.0</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
@@ -69,10 +72,9 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.7.0</version>
+				<version>3.8.1</version>
 				<configuration>
 					<release>${java.version}</release>
-					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
